<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layoutDirection="ltr"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ChangePinActivity"
    android:background="@color/white">

    <ImageView
        android:id="@+id/back_btn_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/back_button_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/heading_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pin_settings_header"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/back_btn_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/back_btn_img" />

    <TextView
        android:id="@+id/desc_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:gravity="center"
        android:text="@string/update_your_pin_to_cancel_sos_during_false_alarm"
        android:textSize="@dimen/_10sdp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading_tv" />

    <TextView
        android:id="@+id/presentPin_tv_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:text="@string/enter_present_pin"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc_tv" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/presentPin_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/presentPin_tv_desc">

        <EditText
            android:id="@+id/editTextpresentPin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/bg_card"
            android:ems="11"
            android:padding="@dimen/_10sdp"
            android:gravity="center"
            android:hint="@string/present_pin_hint"
            android:inputType="numberPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.484" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/newPin_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:text="@string/enter_new_pin"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/presentPin_layout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/newPin_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/newPin_desc">

        <EditText
            android:id="@+id/editTextnewPin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/bg_card"
            android:ems="11"
            android:padding="@dimen/_10sdp"
            android:gravity="center"
            android:hint="@string/new_pin_hint"
            android:inputType="numberPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.484" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/confirm_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:text="@string/confirm_new_pin"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPin_layout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/confirm_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/confirm_desc">

        <EditText
            android:id="@+id/editTextconfirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/bg_card"
            android:ems="11"
            android:padding="@dimen/_10sdp"
            android:gravity="center"
            android:hint="@string/confirm_pin_hint"
            android:inputType="numberPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.484" />
    </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/update_btn"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="@dimen/_50sdp"
        android:background="@drawable/bg_red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="@dimen/_25sdp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/update"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>