<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    tools:context=".Activities.AppPermissionActivity"
    android:background="@color/white">

    <ImageView
        android:id="@+id/back_btn_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/back_button_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/heading_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_permissions"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/back_btn_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/back_btn_img" />

    <TextView
        android:id="@+id/desc_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/need_access_for_the_following_for_your_safety"
        android:textSize="@dimen/_10sdp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading_tv" />

    <ImageView
        android:id="@+id/overlay_img_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/mic_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc_tv"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_30sdp"/>

    <TextView
        android:id="@+id/overlayDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:text="@string/overlay"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/overlay_img_id"
        app:layout_constraintTop_toBottomOf="@+id/desc_tv" />

    <TextView
        android:id="@+id/overlay_btn_desc_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/bulleted_text_overlay"
        android:textColor="@color/black"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@+id/overlayDesc"
        app:layout_constraintTop_toBottomOf="@+id/overlayDesc" />

    <RadioButton
        android:id="@+id/radio_overlay_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_30sdp"
        app:layout_constraintBottom_toBottomOf="@+id/overlayDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/overlayDesc" />


    <ImageView
        android:id="@+id/contact_img_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/contact_permission_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/overlay_btn_desc_sub"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_30sdp"/>

    <TextView
        android:id="@+id/contactDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:text="@string/contacts"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/contact_img_id"
        app:layout_constraintTop_toBottomOf="@+id/overlay_btn_desc_sub" />

    <TextView
        android:id="@+id/power_btn_desc_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/bulleted_text"
        android:textColor="@color/black"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@+id/contactDesc"
        app:layout_constraintTop_toBottomOf="@+id/contactDesc" />

    <RadioButton
        android:id="@+id/radio_power_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_30sdp"
        app:layout_constraintBottom_toBottomOf="@+id/contactDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/contactDesc" />

    <ImageView
        android:id="@+id/location_img_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/location_permission_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/power_btn_desc_sub"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_30sdp"/>

    <TextView
        android:id="@+id/locationDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:text="@string/location"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/location_img_id"
        app:layout_constraintTop_toBottomOf="@+id/power_btn_desc_sub" />

    <TextView
        android:id="@+id/location_desc_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/bulleted_text_location"
        android:textColor="@color/black"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@+id/locationDesc"
        app:layout_constraintTop_toBottomOf="@+id/locationDesc" />

    <RadioButton
        android:id="@+id/radio_location_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_30sdp"
        app:layout_constraintBottom_toBottomOf="@+id/locationDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/locationDesc" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/allow_btn"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:background="@drawable/bg_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/deny_btn"
        android:layout_marginBottom="@dimen/_15sdp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/allow"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/deny_btn"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:background="@drawable/bg_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_25sdp">

        <TextView
            android:id="@+id/deny_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/deny"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>